<?xml version="1.0"?>
<package format="3">
  <name>turtlmap</name>
  <version>0.0.1</version>
  <description>Online posegraph backend for TURTLMap (ROS2).</description>

  <maintainer email="you@example.com">Zimeng</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <depend>yaml-cpp</depend>
  <depend>eigen</depend>
  <depend>gtsam</depend>

  <depend>dvl_a50</depend>
  <depend>dvl_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
